fixed horizontal scroll bar; child element of a parent whose min-width is 100vw cannot also have min-width of 100vw

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 /* @import url("bulma.css"); */
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-size: 20px;
-  font-family: "Special Elite", monospace;
-  max-width: 100vw;
+  /* font-family: "Special Elite", monospace; */
+  /* min-width: 100vw; */
   /* background: rgba(0, 0, 0, 0); */
 }
 
@@ -53,8 +57,8 @@ header {
 } */
 div.container {
   /* position: absolute; */
-  min-height: 100vh;
-  min-width: 100vw;
+  /* min-height: 100vh; */
+  min-width: 100%;
   background: url(../img/rainy-cafe.gif) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -63,7 +67,7 @@ div.container {
   color: rgb(226, 226, 226);
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.myBackground.jpg', sizingMethod='scale');
 -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='myBackground.jpg', sizingMethod='scale')";
-  /* overflow:scroll; */
+  overflow: hidden;
   /* margin: 0;
   padding: 0;
   top: 0;
@@ -73,10 +77,6 @@ div.container {
 .sticky {
   position: fixed;
   bottom: 0;
-}
-
-.active {
-  min-height: 100vh;
 }
 
 nav ul {
@@ -91,10 +91,6 @@ nav ul {
   min-height: 60px;
 }
 
-i {
-  color: white;
-  background: none !important;
-}
 
 a {
   text-decoration-style: dotted; 
